# imitari

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  app.json  docker-compose-dev.yml  docker-compose.yml  example.sxcu
.github/workflows/: binaries.yml  docker.yml
src/: auth.rs  id.rs  main.rs  models.rs
templates/: login.html  upload.html
