[package]
name = "imitari"
version = "1.0.2"
authors = ["cerda <cerdamods@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
env_logger = "0.9.0"
actix-codec = "0.4.0"
actix-multipart = "0.3.0"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
sanitize-filename = "0.3.0"
rand = "0.8.4"
regex = "1.5.4"
serde_json = "1.0.68"
actix-web-httpauth = "0.5.1"
once_cell = "1.8.0"
dotenv = "0.15.0"
tera = "1.12.1"
actix-identity = "0.3.1"

[[bin]]
name = "imitari"
path = "src/main.rs"
test = false
doc = false
